Bug 408427 - Reference images are not supposed to have boolean operations applied to them
Summary: Reference images are not supposed to have boolean operations applied to them
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Reference Images (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-07 19:41 UTC by Neviril
Modified: 2019-06-24 08:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Neviril 2019-06-07 19:41:10 UTC
(4.3.0-prealpha git 81fdaf7)

SUMMARY
When a reference image is right-clicked as soon as the reference image tool is enabled, additional options related with vector handling appear.

STEPS TO REPRODUCE
1. Add any reference image to the canvas
2. Select another tool (e.g. the Brush tool)
3. Select again the reference image tool
4. Right click on a reference image

OBSERVED RESULT
More right-click options than usual appear.

EXPECTED RESULT
I understand from discussions on #Krita on IRC that the vector boolean operation menu is not supposed to appear at all with reference images.

SOFTWARE/OS VERSIONS
Windows 10 64bit 1903
Comment 1 M 2019-06-07 19:54:49 UTC
Can confirm here, 4.3.0-prealpha (git 81fdaf7). The Group/Ungroup and Logical Operations entries disappear once the selection of ref images has been changed.
Comment 2 Halla Rempt 2019-06-21 12:54:20 UTC
Git commit 1c6f88cbb4013c97b12ee8e689e519f834670ddb by Boudewijn Rempt.
Committed on 21/06/2019 at 12:53.
Pushed by rempt into branch 'master'.

Only use the actions that are suitable for the reference image tool

The default tool has many actions that are not suitable for the
reference image tool, so we only re-use the actions that are
needed.

M  +26   -24   plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.cpp

https://invent.kde.org/kde/krita/commit/1c6f88cbb4013c97b12ee8e689e519f834670ddb
Comment 3 Halla Rempt 2019-06-24 08:21:45 UTC
Git commit de947a2529b4bea1f7303355de74e195d238dcb5 by Boudewijn Rempt.
Committed on 24/06/2019 at 08:20.
Pushed by rempt into branch 'krita/4.2'.

Only use the actions that are suitable for the reference image tool

The default tool has many actions that are not suitable for the
reference image tool, so we only re-use the actions that are
needed.

M  +26   -24   plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.cpp

https://invent.kde.org/kde/krita/commit/de947a2529b4bea1f7303355de74e195d238dcb5