Only use the actions that are suitable for the reference image tool

The default tool has many actions that are not suitable for the
reference image tool, so we only re-use the actions that are
needed.

BUG:408427